--- a/BillShare.Logic/BillShare.Logic.csproj
+++ b/BillShare.Logic/BillShare.Logic.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,6 +7,10 @@
   <ItemGroup>
     <ProjectReference Include="..\BillShare.Contracts\BillShare.Contracts.csproj" />
     <ProjectReference Include="..\CommonBase\CommonBase.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Entities\Business\" />
   </ItemGroup>
 
 </Project>
