--- a/BillShare.Logic/BillShare.Logic.csproj
+++ b/BillShare.Logic/BillShare.Logic.csproj
@@ -10,7 +10,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="DataContext\Db\" />
     <Folder Include="Entities\Business\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
